commit c0c53ec543c5db4ea756814e805d0b784908e4ca
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Sun Jan 22 01:10:36 2012 +0600

    start News system

commit ab540b23ceb953b500aa4b64ba78499bf30dd42d
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Sat Jan 21 17:51:35 2012 +0600

    v0.0.5

commit fa58a37fc5a14f3c025a68dd2deb42f8c33d407c
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Sat Jan 21 17:27:55 2012 +0600

    add custom decorator and forms` translation

commit 85e91783cb83ff4f315f4858afc7f739a745b57d
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Tue Jan 17 02:01:19 2012 +0600

    fix back

commit 65850595184a58362b94b340ffc9a912306f1c4e
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Tue Jan 17 01:53:20 2012 +0600

    Changes

commit ec8b632833bdad0da4f1421c1963f19790310237
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Tue Jan 17 01:52:51 2012 +0600

    login via mail works. v0.0.4

commit 9b44d33ce2ce199f6c441016833f8c7040387c6b
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Tue Jan 17 01:40:18 2012 +0600

    one more fix

commit c836be6092098081d6f8326382d01361653ee6f3
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Tue Jan 17 01:18:56 2012 +0600

    changes

commit 842388b6d88fa762b37bb843431b60bc3dce40c0
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Tue Jan 17 01:18:12 2012 +0600

    small fix for mail

commit bc4a2dcbafbfda5aa0cfd085ffe1541e86d7c310
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Tue Jan 17 01:02:31 2012 +0600

    fix Message plugin, rm primary key from mailConfirm

commit 30c1b0464bbf1190aaa937015a6c3e3aa8695343
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Tue Jan 17 00:23:18 2012 +0600

    forgot template for mail

commit 3f27bee56876fa9a229ec5739c13cb5e70b55a10
Author: Georgy Bazhukov <georgy.bazhukov@gmail.com>
Date:   Tue Jan 17 00:16:53 2012 +0600

    changes
