@@ -15,8 +15,19 @@
     .wrap
     {
         background:#fff;
-        padding:10px 0px;
+        padding:0px 0px;
+    }
+    
+    .contentWrap
+    {
+        width:800px;
+        margin:0px auto;
+        padding:10px 20px;
         min-height:400px;
+        position: relative;
+        box-shadow:
+            10px 0 10px -10px rgba(0,0,0,0.5),
+            -10px 0 10px -10px rgba(0,0,0,0.5);
     }
 
     .hidden
@@ -142,7 +153,7 @@
         text-decoration:none;
     }
     
-    article.content, footer.overall, header.overall
+    footer.overall, header.overall
     {
         width:800px;
         margin:0px auto;
@@ -236,8 +247,9 @@
     {
         text-align:center;
         margin: 0px;
-        width:800px;
+        width:700px;
         margin:0px auto;
+        font-size:12px;
     }
 
     .info
@@ -251,6 +263,7 @@
         background: #fee;
         border: 1px solid #fcc;
         margin: 0px auto;
+        color:#d77;
     }
 
     .done
@@ -291,4 +304,20 @@
     .pony-form input
     {
         float:right;
+    }
+    
+    .legend
+    {
+        padding-bottom:10px;
+    }
+    
+    .news nav
+    {
+        background:#eee;
+        margin-top:10px;
+        padding:5px;
+	    -moz-border-radius:5px;
+	    -webkit-border-radius:5px;
+	    border-radius:5px;
+	    -khtml-border-radius:5px;
     }
